[gd_scene load_steps=4 format=3 uid="uid://cr3tdv714msr5"]

[ext_resource type="Texture2D" uid="uid://dnyyvfnh4uwdj" path="res://icon.svg" id="1_8gykc"]
[ext_resource type="Script" path="res://economy/port_screen.gd" id="1_k8gds"]
[ext_resource type="Script" path="res://economy/transaction_screen.gd" id="2_q3np1"]

[node name="port_screen" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k8gds")

[node name="HomeScreen" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PortText" type="Label" parent="HomeScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 536.0
offset_top = 120.0
offset_right = 576.0
offset_bottom = 143.0
grow_horizontal = 2
text = "Port"

[node name="FactionText" type="Label" parent="HomeScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 528.0
offset_top = 143.0
offset_right = 585.0
offset_bottom = 166.0
grow_horizontal = 2
text = "Faction"

[node name="OptionContainer" type="VBoxContainer" parent="HomeScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 529.5
offset_top = 271.0
offset_right = 582.5
offset_bottom = 337.0
grow_horizontal = 2
grow_vertical = 2

[node name="TradeButton" type="Button" parent="HomeScreen/OptionContainer"]
layout_mode = 2
text = "Trade"

[node name="ExitButton" type="Button" parent="HomeScreen/OptionContainer"]
layout_mode = 2
text = "Exit"

[node name="TransactionScreen" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_q3np1")

[node name="Trade" type="Label" parent="TransactionScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 531.0
offset_top = 119.0
offset_right = 576.0
offset_bottom = 142.0
grow_horizontal = 2
text = "Trade"

[node name="PlayerGold" type="Label" parent="TransactionScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 241.0
offset_top = 160.0
offset_right = 326.0
offset_bottom = 183.0
grow_horizontal = 2
text = "Your Gold: "

[node name="PortGold" type="Label" parent="TransactionScreen"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 766.0
offset_top = 160.0
offset_right = 848.0
offset_bottom = 183.0
grow_horizontal = 0
text = "Port Gold: "

[node name="GoodsContainer" type="VBoxContainer" parent="TransactionScreen"]
custom_minimum_size = Vector2(400, 25)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 381.0
offset_top = 285.0
offset_right = 781.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="TransactionScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 528.0
offset_top = 466.0
offset_right = 602.0
offset_bottom = 497.0
grow_horizontal = 2
grow_vertical = 0
text = "Exit Port"

[node name="BackButton" type="Button" parent="TransactionScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 528.0
offset_top = 432.0
offset_right = 602.0
offset_bottom = 463.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0.152941)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -396.0
offset_top = -235.0
offset_right = -268.0
offset_bottom = -107.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(6.37781, 3.60581)
mouse_filter = 2
texture = ExtResource("1_8gykc")

[connection signal="pressed" from="HomeScreen/OptionContainer/TradeButton" to="." method="_on_trade_button_pressed"]
[connection signal="pressed" from="HomeScreen/OptionContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="TransactionScreen/Button" to="TransactionScreen" method="_on_button_pressed"]
[connection signal="pressed" from="TransactionScreen/BackButton" to="TransactionScreen" method="_on_back_button_pressed"]
